# center-scheduling

./: .gitignore  README.md  app.py  main.py  packages.txt  pyproject.toml
center-scheduling/: README.md  app.py  environment.yaml  pyproject.toml  requirements.txt  stats.json
center-scheduling/conf/: logging.yml
center-scheduling/conf/base/: catalog.yml  logging.yml  parameters.yml
center-scheduling/conf/local/: catalog.yml
center-scheduling/data/01_raw/: center_data.xlsx
center-scheduling/src/center_scheduling/: __init__.py  __main__.py  settings.py
center-scheduling/src/center_scheduling/pipelines/data_science/: nodes.py  pipeline.py
center-scheduling/src/center_scheduling/pipelines/data_science/nodes/: __init__.py  constraints.py  indicators.py  objective.py  setup.py  solve.py
center-scheduling/src/center_scheduling/pipelines/reporting/: nodes.py  pipeline.py
