[project]
name = "center-scheduling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "arabic-reshaper>=3.0.0",
    "jupyter>=1.1.1",
    "kedro>=0.19.8",
    "kedro-datasets>=1.8.0",
    "openpyxl>=3.1.5",
    "pandas>=2.0.3",
    "pillow>=10.4.0",
    "pyomo>=6.8.2",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.2",
    "streamlit>=1.40.1",
    "tqdm>=4.67.1",
]
